--- a/crosswalks_detection.ipynb
+++ b/crosswalks_detection.ipynb
@@ -67,12 +67,33 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title This calculates the metrics on a series of images called 'test'\n",
-        "%rm -r /content/gdrive/MyDrive/ProgettoVeP/testResult/exp\n",
-        "!python /content/gdrive/MyDrive/ProgettoVeP/yolov5/val.py --data /content/gdrive/MyDrive/ProgettoVeP/dataset/data.yaml --weights /content/gdrive/MyDrive/ProgettoVeP/lastTrain/exp/weights/best.pt --project /content/gdrive/MyDrive/ProgettoVeP/testResult/"
+        "%rm -r /content/gdrive/MyDrive/$folder/test_results/exp\n",
+        "!python /content/gdrive/MyDrive/$folder/yolov5/val.py --data /content/gdrive/MyDrive/$folder/test_dataset/data.yaml --weights /content/gdrive/MyDrive/$folder/training_results/exp/weights/best.pt --project /content/gdrive/MyDrive/$folder/test_results/"
       ],
       "metadata": {
         "id": "pP1rsYrEvRg6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Printing result to confront\n",
+        "from PIL import Image\n",
+        "\n",
+        "precision_training = '/content/gdrive/MyDrive/'+folder+'/training_results/exp/P_curve.png'\n",
+        "precision_test = '/content/gdrive/MyDrive/'+folder+'/test_results/exp/P_curve.png'\n",
+        "\n",
+        "im1 = Image.open(precision_training)\n",
+        "im2 = Image.open(precision_test)\n",
+        "print(\"Precision Training\")\n",
+        "display(im1)\n",
+        "print(\"Precision Test\")\n",
+        "display(im2)"
+      ],
+      "metadata": {
+        "id": "uwOOS_OXFo8z"
       },
       "execution_count": null,
       "outputs": []
