detection-test-video

--- a/crosswalks_detection.ipynb
+++ b/crosswalks_detection.ipynb
@@ -106,7 +106,8 @@
       },
       "outputs": [],
       "source": [
-        "!python /content/gdrive/MyDrive/ProgettoVeP/yolov5/detect.py --source /content/gdrive/MyDrive/ProgettoVeP/dataset/test/images --weights /content/gdrive/MyDrive/ProgettoVeP/lastTrain/exp/weights/best.pt --project /content/gdrive/MyDrive/ProgettoVeP/detection/\n",
+        "video_name = 'video1.mp4' #@param {type:\"string\"}\n",
+        "!python /content/gdrive/MyDrive/$folder/yolov5/detect.py --source /content/gdrive/MyDrive/$folder/videos/$video_name --weights /content/gdrive/MyDrive/$folder/training_results/exp/weights/best.pt --project /content/gdrive/MyDrive/$folder/detection_results/\n",
         "                            "
       ]
     }
